[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/sprites/ninepatch-sidebar.png" type="Texture" id=1]
[ext_resource path="res://ui/ReshapeUpgradeSelector.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/IndividualViewer.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/FullSidebar.gd" type="Script" id=4]
[ext_resource path="res://ui/SidebarTheme.tres" type="Theme" id=5]

[node name="FullSidebar" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="NinePatchRect" parent="."]
self_modulate = Color( 0.615686, 0.615686, 0.615686, 1 )
margin_right = 146.0
margin_bottom = 480.0
theme = ExtResource( 5 )
texture = ExtResource( 1 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="PauseButton" type="Button" parent="Background"]
margin_left = 10.0
margin_top = 3.0
margin_right = 68.0
margin_bottom = 21.0
text = "Pause"

[node name="ResetButton" type="Button" parent="Background"]
margin_left = 80.0
margin_top = 3.0
margin_right = 138.0
margin_bottom = 21.0
text = "Reset"

[node name="NextWaveButton" type="Button" parent="Background"]
margin_left = 10.0
margin_top = 25.0
margin_right = 138.0
margin_bottom = 43.0
hint_tooltip = "Hotkey: N"
text = "Start"

[node name="DividerTop" type="ColorRect" parent="Background"]
modulate = Color( 0.615686, 0.615686, 0.615686, 1 )
margin_left = 2.0
margin_top = 48.0
margin_right = 146.0
margin_bottom = 50.0
color = Color( 0.92549, 0.85098, 0.839216, 1 )

[node name="ReshapeUpgradeSelector" parent="Background" instance=ExtResource( 2 )]
position = Vector2( 10, 54 )

[node name="ColorRect" type="ColorRect" parent="Background"]
modulate = Color( 0.615686, 0.615686, 0.615686, 1 )
margin_left = 2.0
margin_top = 266.0
margin_right = 146.0
margin_bottom = 268.0
color = Color( 0.92549, 0.85098, 0.839216, 1 )

[node name="IndividualViewer" parent="Background" instance=ExtResource( 3 )]
position = Vector2( 10, 274 )
